--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,4 @@ script:
 
 after_script:
   # get scrutinizer for coverage upload
-  - |
-    if [[ $TRAVIS_PHP_VERSION != '7.0' ]]; then
-      php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
-    fi
+  - php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
