--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.8",
-        "squizlabs/php_codesniffer": "~2.7"
+        "squizlabs/php_codesniffer": "~2.7",
+        "scrutinizer/ocular": "^1.3"
     },
     "autoload": {
         "psr-0": { "": "src/" }
