--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.8",
-        "squizlabs/php_codesniffer": "~2.7",
-        "scrutinizer/ocular": "^1.3"
+        "squizlabs/php_codesniffer": "~2.7"
     },
     "autoload": {
         "psr-0": { "": "src/" }
