--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,4 @@ script:
 
 after_script:
   # get scrutinizer for coverage upload
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
