--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "php" : "~5.3"
     },
     "require-dev": {
+        "php" : "~5.5",
         "phpunit/phpunit" : "~4.8",
-        "squizlabs/php_codesniffer": "~2.7"
+        "squizlabs/php_codesniffer": "~2.7",
+        "scrutinizer/ocular": "^1.3"
     },
     "autoload": {
         "psr-0": { "": "src/" }
