--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,16 @@
         }
     ],
     "require": {
-        "php" : "~5.3"
+        "php" : ">=7"
     },
     "require-dev": {
-        "phpunit/phpunit" : "~4.8",
-        "squizlabs/php_codesniffer": "~2.7"
+        "phpunit/phpunit" : ">=9",
+        "squizlabs/php_codesniffer": "~3.5"
     },
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-4": {
+            "Hexako\\Pohoda\\": "src/Hexako/Pohoda/",
+            "Hexako\\Exception\\": "src/Hexako/Exception/"
+        }
     }
 }
